// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ChartRadialProgress UnitTest renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z",
                "stroke": "#2a2a4a",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "75%",
              ],
              "props": {
                "alignmentBaseline": "middle",
                "fill": "#ffffff",
                "fontSize": 12,
                "textAnchor": "middle",
                "x": 75,
                "y": 75,
              },
              "type": "SvgText",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75A75,75,0,1,1,-75,9.184850993605149e-15L-73,8.939921633775678e-15A73,73,0,1,0,4.469960816887839e-15,-73Z",
                "fill": "#00d4ff",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
          ],
          "props": {
            "height": 150,
            "style": undefined,
            "width": 150,
          },
          "type": "Svg",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ChartRadialProgress UnitTest renders with value 0 (empty progress) 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z",
                "stroke": "#2a2a4a",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "0%",
              ],
              "props": {
                "alignmentBaseline": "middle",
                "fill": "#ffffff",
                "fontSize": 12,
                "textAnchor": "middle",
                "x": 75,
                "y": 75,
              },
              "type": "SvgText",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75L4.469960816887839e-15,-73Z",
                "fill": "#00d4ff",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
          ],
          "props": {
            "height": 150,
            "style": undefined,
            "width": 150,
          },
          "type": "Svg",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ChartRadialProgress UnitTest renders with value at maximum 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z",
                "stroke": "#2a2a4a",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "100%",
              ],
              "props": {
                "alignmentBaseline": "middle",
                "fill": "#ffffff",
                "fontSize": 12,
                "textAnchor": "middle",
                "x": 75,
                "y": 75,
              },
              "type": "SvgText",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z",
                "fill": "#00d4ff",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
          ],
          "props": {
            "height": 150,
            "style": undefined,
            "width": 150,
          },
          "type": "Svg",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ChartRadialProgress UnitTest renders with custom radii 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M3.67394039744206e-15,-60A60,60,0,1,1,-3.67394039744206e-15,60A60,60,0,1,1,3.67394039744206e-15,-60M-9.184850993605149e-15,-50A50,50,0,1,0,9.184850993605149e-15,50A50,50,0,1,0,-9.184850993605149e-15,-50Z",
                "stroke": "#2a2a4a",
                "transform": "translate(60, 60)",
              },
              "type": "Path",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "75%",
              ],
              "props": {
                "alignmentBaseline": "middle",
                "fill": "#ffffff",
                "fontSize": 12,
                "textAnchor": "middle",
                "x": 60,
                "y": 60,
              },
              "type": "SvgText",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M3.67394039744206e-15,-60A60,60,0,1,1,-60,7.34788079488412e-15L-50,6.123233995736766e-15A50,50,0,1,0,3.061616997868383e-15,-50Z",
                "fill": "#00d4ff",
                "transform": "translate(60, 60)",
              },
              "type": "Path",
            },
          ],
          "props": {
            "height": 150,
            "style": undefined,
            "width": 150,
          },
          "type": "Svg",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ChartRadialProgress UnitTest renders with custom label color and size 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z",
                "stroke": "#2a2a4a",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "75%",
              ],
              "props": {
                "alignmentBaseline": "middle",
                "fill": "#fff",
                "fontSize": 18,
                "textAnchor": "middle",
                "x": 75,
                "y": 75,
              },
              "type": "SvgText",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "d": "M4.592425496802574e-15,-75A75,75,0,1,1,-75,9.184850993605149e-15L-73,8.939921633775678e-15A73,73,0,1,0,4.469960816887839e-15,-73Z",
                "fill": "#00d4ff",
                "transform": "translate(75, 75)",
              },
              "type": "Path",
            },
          ],
          "props": {
            "height": 150,
            "style": undefined,
            "width": 150,
          },
          "type": "Svg",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
